# api-data-gen

api-data-gen/: .env  .env.example  .gitignore  CLAUDE.md  pyproject.toml  run_generate.py  需求描述
api-data-gen/docs/: phase1-bootstrap.md  phase2-bootstrap.md  phase3-bootstrap.md  phase5-agent-bootstrap.md  rrs-test-mcp-refactor-plan.md
api-data-gen/output/: agent-draft-bundle.json  agent-draft-local.json  agent-generate-bundle.json  agent-generate-local.json  generate-local-regression.json  generated-batch.sql  generated.sql  test.sql  test_direct.sql
api-data-gen/requirements/: test_wst_alert.txt
api-data-gen/sql/mysql/: phase1_seed.sql
api-data-gen/src/api_data_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api-data-gen/tests/: __init__.py  test_agent_orchestrator_service.py  test_agent_prompt_service.py  test_agent_router_service.py  test_ai_chat_client.py  test_ai_services.py  test_cli_main.py  test_data_generation_service.py  test_dict_rule_resolver.py  test_field_match_discovery_service.py  test_field_match_repository.py  test_interface_trace_service.py  test_local_field_rule_service.py  test_mysql_client.py  test_phase1_validation_service.py  test_planning_service.py  test_react_executor.py  test_record_validation_service.py  test_requirement_parser.py  test_reusable_strategy_repository.py  test_reusable_strategy_service.py  test_sample_repository.py  test_schema_repository.py  test_skills_decorator.py  test_sql_apply_service.py  test_sql_parser.py  test_sql_script_export_service.py  test_strategy_export_service.py
(+66 files in other folders)
