[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-data-gen"
version = "0.1.0"
description = "Phase 1 local MySQL bootstrap and Python repositories for api data generation."
readme = "docs/phase1-bootstrap.md"
requires-python = ">=3.11"
dependencies = [
  "PyMySQL>=1.1,<2",
]

[project.scripts]
api-data-gen = "api_data_gen.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
